# zephyr-mbus-module

./: .gitmodules  AUTHORS  CMakeLists.txt  Kconfig  LICENSE  README.md  TODO.md  prj.conf
.github/workflows/: build.yml
libmbus/mbus/: .gitignore  Makefile  mbus-protocol-aux.c  mbus-protocol.c  mbus-protocol.h  mbus-serial.c  mbus.h
mbus/: .gitignore  Makefile
mbus/include/: mbus-serial.h  mbus.h
mbus/src/: mbus-protocol-aux.c  mbus-protocol.c  mbus-serial.c
src/: main.c
src/module/: mbus-master.c  mbus-serial.c
zephyr/: CMakeLists.txt  module.yml
